--- a/pom.xml
+++ b/pom.xml
@@ -7,20 +7,20 @@
 	<dependency>
 	    <groupId>org.apache.httpcomponents</groupId>
 	    <artifactId>httpclient</artifactId>
-	    <version>4.5.6</version>
+		<version>4.5.12</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
 	    <groupId>org.json</groupId>
 	    <artifactId>json</artifactId>
-	    <version>20180813</version>
+		<version>20190722</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi</artifactId>
-	    <version>4.0.0</version>
+		<version>4.1.2</version>
 	</dependency>
 	
 	
@@ -39,10 +39,9 @@
     
 	      <plugin>
 	        <artifactId>maven-compiler-plugin</artifactId>
-	        <version>3.7.0</version>
+	        <version>3.8.0</version>
 	        <configuration>
-	          <source>1.8</source>
-	          <target>1.8</target>
+				<release>11</release>
 	        </configuration>
 	      </plugin>
  
